--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <label for="inputLGEx">Type of Food</label>
         </div>
         <div class="md-form form-lg">
-          <input type="text" id="location-input" class="form-control form-control-lg">
-          <label for="inputLGEx">Location</label>
+          <input type="text" id="location-input" class="form-control form-control-lg"readonly>
+          <label for="inputLGEx">Location: Orlando, FL</label>
         </div>
       </div>
     </div>
