disabled location field on form

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <label for="inputLGEx">Type of Food</label>
         </div>
         <div class="md-form form-lg">
-          <input type="text" id="location-input" class="form-control form-control-lg"readonly>
+          <input type="text" id="location-input" class="form-control form-control-lg"readonly disabled>
           <label for="inputLGEx">Location: Orlando, FL</label>
         </div>
       </div>
