Made changes to overall color scheme as well as added a background image

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
 <body>
   <!-- As a heading -->
-  <nav class="navbar navbar-light night-fade-gradient">
+  <nav class="navbar navbar-dark morpheus-den-gradient">
     <span class="navbar-brand">Hungry for Justice!</span>
   </nav>
   <!-- jumbotron here -->
   <br>
   <!-- Jumbotron -->
   <div class="container">
-    <div class="jumbotron p-0">
+    <div class="jumbotron p-0 grey lighten-2">
 
       <!-- Card image -->
       <div class="view overlay rounded-top">
@@ -228,7 +228,7 @@
 <!-- Section: Team v.1 -->
   <!-- Copyright -->
   <div class="footer-container">
-    <footer class="page-footer night-fade-gradient">
+    <footer class="page-footer morpheus-den-gradient">
 
       <!-- Copyright -->
       <div class="footer-copyright text-center py-3">© 2019 Copyright:
