--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
   <!-- Footer -->
   
   <!-- Section: Team v.1 -->
-<section class="team-section text-center my-5">
+<section class="team-section text-center my-5 rgba-blue-grey-slight">
 
   <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold my-5">Our amazing team</h2>
+  <h2 class="h1-responsive font-weight-bold my-5 white-text">Our amazing team</h2>
   <!-- Section description -->
   <p class="grey-text w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
     Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
@@ -127,7 +127,7 @@
         <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Anna Williams</h5>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Anna Williams</h5>
       <p class="text-uppercase blue-text"><strong>Graphic designer</strong></p>
       <p class="grey-text">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
         adipisci sed quia non numquam modi tempora eius.</p>
@@ -154,7 +154,7 @@
         <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3">John Doe</h5>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">John Doe</h5>
       <p class="text-uppercase blue-text"><strong>Web developer</strong></p>
       <p class="grey-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem ipsa accusantium
         doloremque rem laudantium totam aperiam.</p>
@@ -177,7 +177,7 @@
         <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Maria Smith</h5>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Maria Smith</h5>
       <p class="text-uppercase blue-text"><strong>Photographer</strong></p>
       <p class="grey-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim est fugiat nulla id eu laborum.</p>
@@ -204,7 +204,7 @@
         <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3">Eric LaMacchia</h5>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Eric LaMacchia</h5>
       <p class="text-uppercase blue-text"><strong>Front end developer</strong></p>
       <p class="grey-text">Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi qui consectetur
         totam officia voluptates perferendis voluptatibus aut.</p>
