changed input field text color to be more visible

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <div class="form-row">
       <div class="container">
         <div class="md-form form-lg">
-          <input type="text" id="food-input" class="form-control form-control-lg">
+          <input type="text" id="food-input" class="form-control form-control-lg blue-grey-text">
           <label for="inputLGEx">Type of Food</label>
         </div>
         <div class="md-form form-lg">
