changed color of jumbotron to be transparent

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <br>
   <!-- Jumbotron -->
   <div class="container">
-    <div class="jumbotron p-0 grey lighten-2">
+    <div class="jumbotron p-0 rgba-blue-grey-slight">
 
       <!-- Card image -->
       <div class="view overlay rounded-top">
