Made the images in the carousel the width of the page

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     <span class="navbar-brand">Hungry for Justice!</span>
   </nav>
   <!-- jumbotron here -->
-  <br>
+  
   <!-- Jumbotron -->
-  <div class="container">
+  <div>
     <div class="jumbotron p-0 rgba-blue-grey-slight">
 
       <!-- Card image -->
