added shadows for depth, changed input text color to white

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
 
 <body>
   <!-- As a heading -->
-  <nav class="navbar navbar-dark morpheus-den-gradient">
+  <nav class="navbar navbar-dark morpheus-den-gradient z-depth-5">
     <span class="navbar-brand">Hungry for Justice!</span>
   </nav>
   <!-- jumbotron here -->
   
   <!-- Jumbotron -->
   <div>
-    <div class="jumbotron p-0 rgba-blue-grey-slight">
+    <div class="jumbotron p-0 rgba-blue-grey-slight z-depth-4">
 
       <!-- Card image -->
       <div class="view overlay rounded-top">
@@ -109,7 +109,7 @@
   <!-- Footer -->
   
   <!-- Section: Team v.1 -->
-<section class="team-section text-center my-5 rgba-blue-grey-slight">
+<section class="team-section text-center my-5 rgba-blue-grey-slight z-depth-3">
 
   <!-- Section heading -->
   <h2 class="h1-responsive font-weight-bold my-5 white-text">Our amazing team</h2>
