--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <!-- Grid column -->
     <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
       <div class="avatar mx-auto">
-        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded-circle z-depth-1"
+        <img id="avatar" src="./assets/images/allison3.jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Anna Williams</h5>
@@ -151,7 +151,7 @@
     <!-- Grid column -->
     <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
       <div class="avatar mx-auto">
-        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="rounded-circle z-depth-1"
+        <img id="avatar" src="./assets/images/josh3.jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3 indigo-text">John Doe</h5>
@@ -174,7 +174,7 @@
     <!-- Grid column -->
     <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
       <div class="avatar mx-auto">
-        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="rounded-circle z-depth-1"
+        <img id="avatar" src="./assets/images/michelle3.jpeg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Maria Smith</h5>
@@ -201,7 +201,7 @@
     <!-- Grid column -->
     <div class="col-lg-3 col-md-6">
       <div class="avatar mx-auto">
-        <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded-circle z-depth-1"
+        <img id="avatar" src="./assets/images/eric3.jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
       <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Eric LaMacchia</h5>
