--- a/index.html
+++ b/index.html
@@ -114,9 +114,7 @@
   <!-- Section heading -->
   <h2 class="h1-responsive font-weight-bold my-5 white-text">Our amazing team</h2>
   <!-- Section description -->
-  <p class="grey-text w-responsive mx-auto mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-    Fugit, error amet numquam iure provident voluptate esse quasi, veritatis totam voluptas nostrum quisquam
-    eum porro a pariatur veniam.</p>
+  <p class="grey-text w-responsive mx-auto mb-5">Hi! Were team Unicorn Robot Dragon Hot Air balloon thank you so much for visiting our page today. Our mission statement is to provide relevant restaraunt information along with crime history for the area so that you can dine and feel safe.</p>
 
   <!-- Grid row -->
   <div class="row">
@@ -127,10 +125,9 @@
         <img id="avatar" src="./assets/images/allison3.jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Anna Williams</h5>
-      <p class="text-uppercase blue-text"><strong>Graphic designer</strong></p>
-      <p class="grey-text">Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur,
-        adipisci sed quia non numquam modi tempora eius.</p>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Allison Juarez</h5>
+      <p class="text-uppercase blue-text"><strong>Back End Developer</strong></p>
+      <p class="grey-text">Hi! I'm Allison Juarez I am currently attending UCF to be a Full Stack Web Developer. (I am mother of two that is way too familiar with kids songs where I enjoy them more than my children.) I love creating and  always searching how to improve.</p>
       <ul class="list-unstyled mb-0">
         <!-- Facebook -->
         <a class="p-2 fa-lg fb-ic">
@@ -154,10 +151,9 @@
         <img id="avatar" src="./assets/images/josh3.jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">John Doe</h5>
-      <p class="text-uppercase blue-text"><strong>Web developer</strong></p>
-      <p class="grey-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem ipsa accusantium
-        doloremque rem laudantium totam aperiam.</p>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Joshua Fowler</h5>
+      <p class="text-uppercase blue-text"><strong>Front End Developer</strong></p>
+      <p class="grey-text">Want drop shadows? You got it! z-index for life! </p>
       <ul class="list-unstyled mb-0">
         <!-- Facebook -->
         <a class="p-2 fa-lg fb-ic">
@@ -177,8 +173,8 @@
         <img id="avatar" src="./assets/images/michelle3.jpeg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Maria Smith</h5>
-      <p class="text-uppercase blue-text"><strong>Photographer</strong></p>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Michelle Mesorana</h5>
+      <p class="text-uppercase blue-text"><strong>Lead Developer</strong></p>
       <p class="grey-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
         mollit anim est fugiat nulla id eu laborum.</p>
       <ul class="list-unstyled mb-0">
@@ -204,10 +200,9 @@
         <img id="avatar" src="./assets/images/eric3.jpg" class="rounded-circle z-depth-1"
           alt="Sample avatar">
       </div>
-      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Eric LaMacchia</h5>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Eric LaMacchia & Doctor LaMacchia</h5>
       <p class="text-uppercase blue-text"><strong>Front end developer</strong></p>
-      <p class="grey-text">Perspiciatis repellendus ad odit consequuntur, eveniet earum nisi qui consectetur
-        totam officia voluptates perferendis voluptatibus aut.</p>
+      <p class="grey-text">I love animals, cooking food and programming.</p>
       <ul class="list-unstyled mb-0">
         <!-- Facebook -->
         <a class="p-2 fa-lg fb-ic">
