--- a/index.html
+++ b/index.html
@@ -175,8 +175,7 @@
       </div>
       <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Michelle Mesorana</h5>
       <p class="text-uppercase blue-text"><strong>Lead Developer</strong></p>
-      <p class="grey-text">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-        mollit anim est fugiat nulla id eu laborum.</p>
+      <p class="grey-text">I'm a UCF graduate and former healthcare professional who's excited to enter the world of web development! Currently, I'm attending the UCF Coding Boot Camp to hone my development skills. When I'm not learning to code, I enjoy watching movies, playing video games, and visiting the local theme parks.</p>
       <ul class="list-unstyled mb-0">
         <!-- Facebook -->
         <a class="p-2 fa-lg fb-ic">
