added a fun easter egg

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,8 +11,7 @@
   <!-- Material Design Bootstrap -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/css/mdb.min.css" rel="stylesheet">
   <link rel="stylesheet" href="assets/css/style.css">
-  <!-- google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Fjalla+One&display=swap" rel="stylesheet">
+
   <!-- JQuery -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <!-- Bootstrap tooltips -->
@@ -33,7 +31,7 @@
     <span class="navbar-brand">Hungry for Justice!</span>
   </nav>
   <!-- jumbotron here -->
-
+  
   <!-- Jumbotron -->
   <div>
     <div class="jumbotron p-0 rgba-blue-grey-slight z-depth-4">
@@ -43,18 +41,20 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="assets/images/Boston-Pizza-table-and-chairs.png" alt="First slide">
+              <img class="d-block w-100" src="assets/images/Boston-Pizza-table-and-chairs.png"
+                alt="First slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100"
-                src="assets/images/Southern-Fried-Chicken-with-Gravy_exps33285_THRAA2874593C01_23_1b_RMS.jpg"
+              <img class="d-block w-100" src="assets/images/Southern-Fried-Chicken-with-Gravy_exps33285_THRAA2874593C01_23_1b_RMS.jpg"
                 alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/images/sushi.jpg" alt="Third slide">
+              <img class="d-block w-100" src="assets/images/sushi.jpg"
+                alt="Third slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/images/spaghetti.jpg" alt="Third slide">
+              <img class="d-block w-100" src="assets/images/spaghetti.jpg"
+                alt="Third slide">
             </div>
           </div>
           <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
@@ -95,7 +95,7 @@
           <label for="inputLGEx">Type of Food</label>
         </div>
         <div class="md-form form-lg">
-          <input type="text" id="location-input" class="form-control form-control-lg" readonly>
+          <input type="text" id="location-input" class="form-control form-control-lg"readonly>
           <label for="inputLGEx">Location: Orlando, FL</label>
         </div>
       </div>
@@ -105,136 +105,135 @@
     </div>
   </form>
 
-  <div id="food-results"></div>
+  <div  id ="food-results"></div>
   <!-- Footer -->
-
+  
   <!-- Section: Team v.1 -->
-  <section class="team-section text-center my-5 rgba-blue-grey-slight z-depth-3">
+<section class="team-section text-center my-5 rgba-blue-grey-slight z-depth-3">
 
-    <!-- Section heading -->
-    <h2 class="h1-responsive font-weight-bold my-5 white-text">Our amazing team</h2>
-    <!-- Section description -->
-    <p class="grey-text w-responsive mx-auto mb-5">Hi! Were team Unicorn Robot Dragon Hot Air balloon thank you so much
-      for visiting our page today. Our mission statement is to provide relevant restaraunt information along with crime
-      history for the area so that you can dine and feel safe.</p>
+  <!-- Section heading -->
+  <h2 class="h1-responsive font-weight-bold my-5 white-text">Our amazing team</h2>
+  <!-- Section description -->
+  <p class="grey-text w-responsive mx-auto mb-5">Hi! Were team Unicorn Robot Dragon Hot Air balloon thank you so much for visiting our page today. Our mission statement is to provide relevant restaraunt information along with crime history for the area so that you can dine and feel safe.</p>
 
-    <!-- Grid row -->
-    <div class="row">
+  <!-- Grid row -->
+  <div class="row">
 
-      <!-- Grid column -->
-      <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
-        <div class="avatar mx-auto">
-          <img id="avatar" src="./assets/images/allison3.jpg" class="rounded-circle z-depth-1" alt="Sample avatar">
-        </div>
-        <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Allison Juarez</h5>
-        <p class="text-uppercase blue-text"><strong>Back End Developer</strong></p>
-        <p class="bio-text">Hi! I'm Allison Juarez I am currently attending UCF to be a Full Stack Web Developer. (I am
-          mother of two that is way too familiar with kids songs where I enjoy them more than my children.) I love
-          creating and always searching how to improve.</p>
-        <ul class="list-unstyled mb-0">
-          <!-- Facebook -->
-          <a class="p-2 fa-lg fb-ic">
-            <i class="fab fa-facebook-f blue-text"> </i>
-          </a>
-          <!-- Twitter -->
-          <a class="p-2 fa-lg tw-ic">
-            <i class="fab fa-twitter blue-text"> </i>
-          </a>
-          <!-- Instagram -->
-          <a class="p-2 fa-lg ins-ic">
-            <i class="fab fa-instagram blue-text"> </i>
-          </a>
-        </ul>
+    <!-- Grid column -->
+    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+      <div class="avatar mx-auto">
+        <img id="avatar" src="./assets/images/allison3.jpg" class="rounded-circle z-depth-1"
+          alt="Sample avatar">
       </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
-        <div class="avatar mx-auto">
-          <img id="avatar" src="./assets/images/josh3.jpg" class="rounded-circle z-depth-1" alt="Sample avatar">
-        </div>
-        <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Joshua Fowler</h5>
-        <p class="text-uppercase blue-text"><strong>Front End Developer</strong></p>
-        <p class="bio-text">Want drop shadows? You got it! z-index for life! </p>
-        <ul class="list-unstyled mb-0">
-          <!-- Facebook -->
-          <a class="p-2 fa-lg fb-ic">
-            <i class="fab fa-facebook-f blue-text"> </i>
-          </a>
-          <!-- Instagram -->
-          <a class="p-2 fa-lg ins-ic">
-            <i class="fab fa-instagram blue-text"> </i>
-          </a>
-        </ul>
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
-        <div class="avatar mx-auto">
-          <img id="avatar" src="./assets/images/michelle3.jpeg" class="rounded-circle z-depth-1" alt="Sample avatar">
-        </div>
-        <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Michelle Mesorana</h5>
-        <p class="text-uppercase blue-text"><strong>Lead Developer</strong></p>
-        <p class="bio-text">I'm a UCF graduate and former healthcare professional who's excited to enter the world of
-          web development! Currently, I'm attending the UCF Coding Boot Camp to hone my development skills. When I'm not
-          learning to code, I enjoy watching movies, playing video games, and visiting the local theme parks.</p>
-        <ul class="list-unstyled mb-0">
-          <!-- Facebook -->
-          <a class="p-2 fa-lg fb-ic">
-            <i class="fab fa-facebook-f blue-text"> </i>
-          </a>
-          <!-- Instagram -->
-          <a class="p-2 fa-lg ins-ic">
-            <i class="fab fa-instagram blue-text"> </i>
-          </a>
-          <!-- Dribbble -->
-          <a class="p-2 fa-lg ins-ic">
-            <i class="fab fa-dribbble blue-text"> </i>
-          </a>
-        </ul>
-      </div>
-      <!-- Grid column -->
-
-      <!-- Grid column -->
-      <div class="col-lg-3 col-md-6">
-        <div class="avatar mx-auto">
-          <img id="avatar" src="./assets/images/eric3.jpg" class="rounded-circle z-depth-1" alt="Sample avatar">
-        </div>
-        <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Eric LaMacchia & Doctor LaMacchia</h5>
-        <p class="text-uppercase blue-text"><strong>Front end developer</strong></p>
-        <p class="bio-text">I love animals, cooking food and programming.</p>
-        <ul class="list-unstyled mb-0">
-          <!-- Facebook -->
-          <a class="p-2 fa-lg fb-ic">
-            <i class="fab fa-facebook-f blue-text"> </i>
-          </a>
-          <!-- Github -->
-          <a class="p-2 fa-lg ins-ic">
-            <i class="fab fa-github blue-text"> </i>
-          </a>
-        </ul>
-      </div>
-      <!-- Grid column -->
-
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Allison Juarez</h5>
+      <p class="text-uppercase blue-text"><strong>Back End Developer</strong></p>
+      <p class="grey-text">Hi! I'm Allison Juarez I am currently attending UCF to be a Full Stack Web Developer. (I am mother of two that is way too familiar with kids songs where I enjoy them more than my children.) I love creating and  always searching how to improve.</p>
+      <ul class="list-unstyled mb-0">
+        <!-- Facebook -->
+        <a class="p-2 fa-lg fb-ic">
+          <i class="fab fa-facebook-f blue-text"> </i>
+        </a>
+        <!-- Twitter -->
+        <a class="p-2 fa-lg tw-ic">
+          <i class="fab fa-twitter blue-text"> </i>
+        </a>
+        <!-- Instagram -->
+        <a class="p-2 fa-lg ins-ic">
+          <i class="fab fa-instagram blue-text"> </i>
+        </a>
+      </ul>
     </div>
-    <!-- Grid row -->
+    <!-- Grid column -->
 
-  </section>
-  <!-- Section: Team v.1 -->
+    <!-- Grid column -->
+    <div class="col-lg-3 col-md-6 mb-lg-0 mb-5">
+      <div class="avatar mx-auto">
+        <img id="avatar-one" src="./assets/images/josh3.jpg" class="rounded-circle z-depth-1"
+          alt="Sample avatar">
+      </div>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Joshua Fowler</h5>
+      <p class="text-uppercase blue-text"><strong>Front End Developer</strong></p>
+      <p class="grey-text">Want drop shadows? You got it! z-index for life! </p>
+      <ul class="list-unstyled mb-0">
+        <!-- Facebook -->
+        <a class="p-2 fa-lg fb-ic">
+          <i class="fab fa-facebook-f blue-text"> </i>
+        </a>
+        <!-- Instagram -->
+        <a class="p-2 fa-lg ins-ic">
+          <i class="fab fa-instagram blue-text"> </i>
+        </a>
+      </ul>
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-3 col-md-6 mb-md-0 mb-5">
+      <div class="avatar mx-auto">
+        <img id="avatar-two" src="./assets/images/michelle3.jpeg" class="rounded-circle z-depth-1"
+          alt="Sample avatar">
+      </div>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Michelle Mesorana</h5>
+      <p class="text-uppercase blue-text"><strong>Lead Developer</strong></p>
+      <p class="grey-text">I'm a UCF graduate and former healthcare professional who's excited to enter the world of web development! Currently, I'm attending the UCF Coding Boot Camp to hone my development skills. When I'm not learning to code, I enjoy watching movies, playing video games, and visiting the local theme parks.</p>
+      <ul class="list-unstyled mb-0">
+        <!-- Facebook -->
+        <a class="p-2 fa-lg fb-ic">
+          <i class="fab fa-facebook-f blue-text"> </i>
+        </a>
+        <!-- Instagram -->
+        <a class="p-2 fa-lg ins-ic">
+          <i class="fab fa-instagram blue-text"> </i>
+        </a>
+        <!-- Dribbble -->
+        <a class="p-2 fa-lg ins-ic">
+          <i class="fab fa-dribbble blue-text"> </i>
+        </a>
+      </ul>
+    </div>
+    <!-- Grid column -->
+
+    <!-- Grid column -->
+    <div class="col-lg-3 col-md-6">
+      <div class="avatar mx-auto">
+        <img id="avatar-three" src="./assets/images/eric3.jpg" class="rounded-circle z-depth-1"
+          alt="Sample avatar">
+      </div>
+      <h5 class="font-weight-bold mt-4 mb-3 indigo-text">Eric LaMacchia & Doctor LaMacchia</h5>
+      <p class="text-uppercase blue-text"><strong>Front end developer</strong></p>
+      <p class="grey-text">I love animals, cooking food and programming.</p>
+      <ul class="list-unstyled mb-0">
+        <!-- Facebook -->
+        <a class="p-2 fa-lg fb-ic">
+          <i class="fab fa-facebook-f blue-text"> </i>
+        </a>
+        <!-- Github -->
+        <a class="p-2 fa-lg ins-ic">
+          <i class="fab fa-github blue-text"> </i>
+        </a>
+      </ul>
+    </div>
+    <!-- Grid column -->
+
+  </div>
+  <!-- Grid row -->
+
+</section>
+<!-- Section: Team v.1 -->
   <!-- Copyright -->
   <div class="footer-container">
     <footer class="page-footer morpheus-den-gradient">
 
       <!-- Copyright -->
-      <div class="footer-copyright text-center py-3">© 2019 Copyright
+      <div class="footer-copyright text-center py-3">© 2019 Copyright:
 
       </div>
   </div>
 
   </footer>
   <!-- Footer -->
-  <script src="assets/javascript/app.js"></script>
+<script src="assets/javascript/app.js"></script>
+<script src="assets/javascript/flavortown.js"></script>
 </body>
 
 </html>
