added a favicon to the tab

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
   <title>Hungry for Justice!</title>
+  <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
 </head>
 
 <body>
