--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
     <!-- Modal -->
     <div class="modal fade" id="errorModal" tabindex="-1" role="dialog" aria-labelledby="errorModalLabel"
       aria-hidden="true">
-      <div class="modal-dialog" role="document">
+      <div class="modal-dialog modal-notify modal-warning" role="document">
         <div class="modal-content">
           <div class="modal-header">
-            <h5 class="modal-title" id="errorModalLabel">No Results Found</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <h5 class="modal-title white-text" id="errorModalLabel">No Results Found</h5>
+            <button type="button" class="close white-text" data-dismiss="modal" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
           <div class="modal-body">
-            Please enter a restaraunt name or type of cuisine.
+            Please enter a restaurant name or type of cuisine.
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            <button type="button" class="btn peach-gradient" data-dismiss="modal">Close</button>
           </div>
         </div>
       </div>
