added media queries for ipad and phone screen sizes to resize carousel. changed sushi image in carousel.

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 alt="Second slide">
             </div>
             <div class="carousel-item">
-              <img class="d-block w-100" src="assets/images/sushi.jpg"
+              <img class="d-block w-100" src="assets/images/sushi2.jpg"
                 alt="Third slide">
             </div>
             <div class="carousel-item">
@@ -136,7 +136,7 @@
 <section class="team-section text-center my-5 rgba-blue-grey-slight z-depth-3">
 
   <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold my-5 white-text">Our amazing team</h2>
+  <h2 class="h1-responsive font-weight-bold pt-3 my-5 white-text">Our amazing team</h2>
   <!-- Section description -->
   <p class="grey-text w-responsive mx-auto mb-5">Hi! Were team Unicorn Robot Dragon Hot Air balloon thank you so much for visiting our page today. Our mission statement is to provide relevant restaraunt information along with crime history for the area so that you can dine and feel safe.</p>
 
