--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script>
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.8.10/js/mdb.min.js"></script>
-  <title>Hungry for Justice!</title>
+  <title>Hungry for Justice</title>
   <link rel="shortcut icon" type="image/png" href="assets/images/favicon.png"/>
 </head>
 
