added media queries to center result cards on tablets and phone screens. modified padding between team section title and paragraph.

--- a/index.html
+++ b/index.html
@@ -78,9 +78,10 @@
       <div class="card-body text-center mb-3">
 
         <!-- Title -->
-        <h3 class="card-title h3 my-4"><strong>Card title</strong></h3>
+        <h3 class="card-title h3 my-4"><strong>Welcome to Hungry For Justice!</strong></h3>
         <!-- Text -->
-        <p class="card-text py-2">Some quick example text to build on the card title and make up the bulk of the card's
+        <p class="card-text py-2">Please enter a restaurant name or type of cuisine to search for restaurants in Orlando, FL.</p>
+        <p class="card-text">Each result will show restaurant contact information and crime data from the surrounding area. Eat and be safe!
         </p>
         <!-- Button -->
         <a href="test.html" target="blank" class="btn purple-gradient btn-rounded mb-4">Click Here!</a>
@@ -136,7 +137,7 @@
 <section class="team-section text-center my-5 rgba-blue-grey-slight z-depth-3">
 
   <!-- Section heading -->
-  <h2 class="h1-responsive font-weight-bold pt-3 my-5 white-text">Our amazing team</h2>
+  <h2 class="h1-responsive font-weight-bold pt-3 mb-4 white-text">Our amazing team</h2>
   <!-- Section description -->
   <p class="grey-text w-responsive mx-auto mb-5">Hi! Were team Unicorn Robot Dragon Hot Air balloon thank you so much for visiting our page today. Our mission statement is to provide relevant restaraunt information along with crime history for the area so that you can dine and feel safe.</p>
 
