--- a/test.html
+++ b/test.html
@@ -171,4 +171,6 @@
         </div>
       
         </footer>
+        <script src="assets/javascript/app.js"></script>
+        <script src="assets/javascript/flavortown.js"></script>
 </body>
